Added dummy image output.

--- a/ray_tracer_CSE167x/Makefile
+++ b/ray_tracer_CSE167x/Makefile
@@ -2,7 +2,7 @@ CC = g++
 
 all: ray_tracer
 ray_tracer: main.o readfile.o 
-	$(CC) -o ray_tracer main.o readfile.o
+	$(CC) -o ray_tracer main.o readfile.o -lfreeimage
 readfile.o: readfile.cc readfile.h
 	$(CC) -c readfile.cc
 
