--- a/advent_of_code/2020/advent_of_code.cabal
+++ b/advent_of_code/2020/advent_of_code.cabal
@@ -21,3 +21,8 @@ executable day_06
   main-is:             day_06.hs
   build-depends:       base >=4.13 && <4.14, containers, split, Unique
   default-language:    Haskell2010
+
+executable day_07
+  main-is:             day_07.hs
+  build-depends:       base >=4.13 && <4.14, containers, split
+  default-language:    Haskell2010
