--- a/advent_of_code/2020/advent_of_code.cabal
+++ b/advent_of_code/2020/advent_of_code.cabal
@@ -48,3 +48,7 @@ executable day_12
   main-is:             day_12.hs
   build-depends:       base >=4.13 && <4.14
 
+executable day_13
+  main-is:             day_13.hs
+  build-depends:       base >=4.13 && <4.14, split
+  
