--- a/advent_of_code/2020/advent_of_code.cabal
+++ b/advent_of_code/2020/advent_of_code.cabal
@@ -56,4 +56,8 @@ executable day_14
   main-is:             day_14.hs
   build-depends:       base >=4.13 && <4.14, containers, split
   
+executable day_15
+  main-is:             day_15.hs
+  build-depends:       base >=4.13 && <4.14, containers, split
+  
   
