--- a/advent_of_code/2020/advent_of_code.cabal
+++ b/advent_of_code/2020/advent_of_code.cabal
@@ -72,5 +72,9 @@ executable day_18
   main-is:             day_18.hs
   build-depends:       base >=4.13 && <4.14
 
+executable day_19
+  main-is:             day_19.hs
+  build-depends:       base >=4.13 && <4.14, containers, split
+
    
   
