Day 20 (Part One)

--- a/advent_of_code/2020/advent_of_code.cabal
+++ b/advent_of_code/2020/advent_of_code.cabal
@@ -76,5 +76,9 @@ executable day_19
   main-is:             day_19.hs
   build-depends:       base >=4.13 && <4.14, containers, split, Unique
 
+executable day_20
+  main-is:             day_20.hs
+  build-depends:       base >=4.13 && <4.14, array, containers, split
+
    
   
