--- a/advent_of_code/2020/advent_of_code.cabal
+++ b/advent_of_code/2020/advent_of_code.cabal
@@ -80,5 +80,9 @@ executable day_20
   main-is:             day_20.hs
   build-depends:       base >=4.13 && <4.14, array, containers, split
 
-   
+executable day_21
+  main-is:             day_21.hs
+  build-depends:       base >=4.13 && <4.14, containers, split, sort
+
+    
   
