--- a/advent_of_code/2020/advent_of_code.cabal
+++ b/advent_of_code/2020/advent_of_code.cabal
@@ -88,5 +88,9 @@ executable day_22
   main-is:             day_22.hs
   build-depends:       base >=4.13 && <4.14, containers, split
 
+executable day_23
+  main-is:             day_23.hs
+  build-depends:       base >=4.13 && <4.14, containers, split
+
     
   
