--- a/advent_of_code/2020/advent_of_code.cabal
+++ b/advent_of_code/2020/advent_of_code.cabal
@@ -92,5 +92,7 @@ executable day_23
   main-is:             day_23.hs
   build-depends:       base >=4.13 && <4.14, containers, split
 
-    
-  
+executable day_24
+  main-is:             day_24.hs
+  build-depends:       base >=4.13 && <4.14, containers, split
+
